public/stylesheets/style.css
html,
body {
   margin:0;
   padding:0;
   width: 100vw;
   height: 100vh;
   max-height: 100vh;
}

body {
  position: relative;
  background:#f5f6f7;
}

.container {
	height: 100%;
	width: 100%;
}

.flexv {
  display: flex;
  flex-flow: column;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

.flexh {
  display: flex;
  flex-flow: row || wrap;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

.flexv .snug, .flexh .snug {
  flex: 0 1 auto;
}

.flexv .greedy, .flexh .greedy {
  flex: 1 1 auto;
}

.flexv .footer {
  flex: 0 1 40px;
  background-color: #3a281e;
  margin-left: -15px;
  width: 100vw;
  text-align: center;
  color: white;
}

.slider.slider-horizontal .slider-track {
  background-image: -webkit-linear-gradient(top, #cccccc 0%, #f9f9f9 100%);
  background-image: -o-linear-gradient(top, #cccccc 0%, #f9f9f9 100%);
  background-image: linear-gradient(to bottom, #cccccc 0%, #f9f9f9 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcccccc', endColorstr='#fff9f9f9', GradientType=0);
}

.slider.slider-vertical .slider-selection {
  background-image: -webkit-linear-gradient(left, #cccccc 0%, #f9f9f9 100%);
  background-image: -o-linear-gradient(left, #cccccc 0%, #f9f9f9 100%);
  background-image: linear-gradient(to right, #cccccc 0%, #f9f9f9 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcccccc', endColorstr='#fff9f9f9', GradientType=1);
}

.slider.slider-vertical .slider-track-high {
  background-image: -webkit-linear-gradient(left, #89cdef 0%, #81bfde 100%);
  background-image: -o-linear-gradient(left, #89cdef 0%, #81bfde 100%);
  background-image: linear-gradient(to right, #89cdef 0%, #81bfde 100%);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef', endColorstr='#ff81bfde', GradientType=1);
}

.slider-tick {
  background-image: -webkit-linear-gradient(top, #ffebeb 0%, #ffcccc 100%);
  background-image: -o-linear-gradient(top, #ffebeb 0%, #ffcccc 100%);
  background-image: linear-gradient(to bottom, #ffebeb 0%, #ffcccc 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffebeb', endColorstr='#ffffcccc', GradientType=0);
}

.row-centered {
    text-align:center;
}

.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

.tooltip-inner {
    max-width: none;
    white-space: nowrap;
    text-align:left;
    background-color: rgba(0,0,0,0.8);
}

pre {
    font-size: 12px;
}

